rename IC startParameterScheme --> startParameterSchema
