# database/models.go
@@ -142,7 +142,7 @@ type InfrastructureComponent struct {
 	// Description of the IC
 	Description string `json:"description" gorm:"default:''"`
 	// JSON scheme of start parameters for IC
-	StartParameterScheme postgres.Jsonb `json:"startparameterscheme"`
+	StartParameterSchema postgres.Jsonb `json:"startparameterschema"`
 	// raw JSON of last status update
 	StatusUpdateRaw postgres.Jsonb `json:"statusupdateraw"`
 	// Boolean indicating if IC is managed externally (via AMQP/ VILLAScontroller)
