# doc/api/swagger.json
@@ -3544,10 +3544,13 @@
                 "ManagedExternally": {
                     "type": "boolean"
                 },
+                "Manager": {
+                    "type": "string"
+                },
                 "Name": {
                     "type": "string"
                 },
-                "StartParameterScheme": {
+                "StartParameterSchema": {
                     "$ref": "#/definitions/postgres.Jsonb"
                 },
                 "State": {
@@ -3585,10 +3588,13 @@
                 "Location": {
                     "type": "string"
                 },
+                "Manager": {
+                    "type": "string"
+                },
                 "Name": {
                     "type": "string"
                 },
-                "StartParameterScheme": {
+                "StartParameterSchema": {
                     "$ref": "#/definitions/postgres.Jsonb"
                 },
                 "State": {
